# wcva_data_analysis

./: .dockerignore  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.example.toml
config/waves/: wave2.schema.yml
docs/: DOCKER_AND_DEPLOYMENT.md  HISTORY_REWRITE_AND_STREAMLIT_SECRETS.md  LEARNING_AND_BACKLOG.md  Makefile  make.bat  requirements-docs.txt
docs/adr/: ADR-001-streamlit-ui.md  ADR-002-navigation-model.md  ADR-003-sroi-evidence-and-charts.md  ADR-004-multi-user-state-and-caching.md  ADR-005-docker-and-self-hosting.md  ADR-006-ci-and-testing.md  ADR-007-runtime-data-and-demo-mode.md  ADR-008-multi-wave-schema-and-mapping-layer.md
docs/learning/: 01_repo_tour_for_python_data_scientists.md  02_private_data_secrets_and_demo_mode.md  03_testing_deployment_and_releases.md  04_from_notebook_to_production.md  05_streamlit_and_dashboards.md  06_feature_from_scratch_example.md  07_how_to_read_this_repo_in_60_minutes.md  README.md
docs/source/: architecture.rst  capability_clusters.md  conf.py  contributing.rst  deployment_checklist.md  engineering_clusters_and_lifecycle.rst  getting_started.rst  improvements_review.md  index.rst  operations_runbook.rst  privacy_and_suppression.rst  release_process.md
plans/: policy_questions.md
references/context/: la_context_wales.csv
scripts/: generate_diagrams.py  run_quality_checks.sh
src/: __init__.py  app.py  charts.py  config.py  data_loader.py  debug_metrics.py  eda.py  filters.py  generate_presentation.py  infographic.py  narratives.py  navigation.py  page_context.py  wave_context.py  wave_schema.py
src/section_pages/: __init__.py  at_a_glance.py  concerns_and_risks.py  data_notes.py  demographics_and_types.py  deployment_health.py  earned_settlement.py  executive_summary.py  overview.py  sroi_references.py  trends_and_waves.py  volunteer_recruitment.py  volunteer_retention.py  workforce_and_operations.py
src/sroi_charts/: __init__.py  sroi_figures.py
tests/: __init__.py  conftest.py  test_config.py  test_conflict.py  test_core.py  test_diff.py  test_export.py  test_tokens.py  test_wcva_metrics_wave2.py
tests/e2e/: __init__.py  test_infographic_smoke.py  test_streamlit_smoke.py
tests/fixtures/: wcva_sample_dataset.csv
tests/integration/: __init__.py  test_demo_vs_real_modes.py  test_infographic_build_metrics.py  test_k_anonymity_end_to_end.py  test_trend_series_integration.py  test_wave_context_integration.py
tests/unit/: __init__.py  test_apply_license_headers.py  test_charts_core.py  test_config_core.py  test_data_loader.py  test_eda_core.py  test_eda_edge_cases.py  (+12 more)
tools/: apply_license_headers.py
(+59 files in other folders)
