# Copyright (C) 2026 - Bharadwaj Raman - https://github.com/nba1990/
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License v3.
#
# See the LICENSE file for details.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcva-baromedr-dashboard"
version = "0.3.0"
description = "WCVA Baromedr Cymru Wave 2 Analysis Dashboard"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
  ".eggs",
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "B905",
]

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["E402"]
"src/app.py" = ["E402"]
"src/debug_metrics.py" = ["E402"]
"src/generate_presentation.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["references/", "tests/e2e/"]
# Gradual typing: allow existing patterns; tighten over time. Stricter rules
# for core runtime modules are configured via module-specific overrides below.
disable_error_code = ["no-any-return", "union-attr", "arg-type", "assignment", "return-value"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "src.config",
  "src.data_loader",
  "src.eda",
  "src.wave_context",
  "src.charts",
  "src.wave_schema",
  "src.page_context",
]
# For core modules, disallow implicit Any returns and tighten common error
# codes while we keep the rest of the codebase on gradual typing.
disable_error_code = ["union-attr", "arg-type", "assignment", "return-value"]
warn_return_any = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 57
show_missing = true
skip_empty = true
# Source code available under AGPLv3: https://github.com/nba1990/wcva_data_analysis
